--- a/draft/index.html
+++ b/draft/index.html
@@ -7,7 +7,7 @@
 const makeNSRequest = function(path) {
   return new Promise(function (resolve, reject) {
     var xhr = new XMLHttpRequest();
-    const ns = "http://markamendoza.com"
+    const ns = "http://stanfordrevision.review"
     xhr.open('GET', ns + path);
     xhr.onload = function () {
       if (this.status >= 200 && this.status < 300) {
